--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "solid-js": "^1.7.6"
+  },
+  "devDependencies": {
+    "@pandacss/dev": "^0.5.0"
   }
 }
