--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@preact/signals-react": "^1.3.2",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
+    "@undefined/lint": "github:JohnDeved/undefined-lint",
     "astro": "^2.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
