--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "solid-js": "^1.7.6"
   },
   "devDependencies": {
-    "@pandacss/dev": "^0.5.0"
+    "@pandacss/dev": "^0.5.0",
+    "eslint-plugin-astro": "^0.27.2"
   }
 }
