--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@astrojs/react": "^2.2.1",
     "@astrojs/solid-js": "^2.2.0",
+    "@egjs/react-infinitegrid": "^4.10.0",
     "@preact/signals-react": "^1.3.2",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
