--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "astro": "^2.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-lazy-load-image-component": "^1.6.0",
     "solid-js": "^1.7.6"
   },
   "devDependencies": {
     "@pandacss/dev": "^0.5.0",
+    "@types/react-lazy-load-image-component": "^1.5.3",
     "eslint-plugin-astro": "^0.27.2"
   }
 }
