--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@undefined/lint": "github:JohnDeved/undefined-lint",
+    "@undefined/saved": "github:JohnDeved/reddit-save-backup",
     "astro": "^2.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
