--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@astrojs/react": "^2.2.1",
+    "@astrojs/sitemap": "^1.3.3",
     "@astrojs/solid-js": "^2.2.0",
     "@egjs/react-infinitegrid": "^4.10.0",
     "@preact/signals-react": "^1.3.2",
